# glimpse-llm

./: README.md  pyproject.toml
glimpse_llm/: __init__.py  config.py
glimpse_llm/core/: interpreter.py  server.py
glimpse_llm/static/: index.html
tests/: test_gpt2.py
