[tool.poetry]
name = "glimpse-llm"
version = "0.1.0"
description = ""
authors = ["Dheemanth Manur <dmanu006@ucr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
torch = "^2.6.0"
numpy = "^2.2.2"
transformers = "^4.48.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
